# exampleOfCMake

./: CMakeLists.txt  LICENSE  NotesCMake.md  README.md  runBuildDemo.sh
cmake/: ExampleOfCMakeConfig.cmake
inc/: CMakeLists.txt  interface.hpp
src/: CMakeLists.txt  ReadMe.md  bar.cpp  bar.hpp  ifc_local.cpp  ifc_local.hpp  ifc_other.cpp  ifc_other.hpp  ifc_public.cpp  interface.cpp
tst/: CMakeLists.txt  ReadMe.md  test_common.hpp  test_ifc_local.cpp  test_ifc_other.cpp  test_ifc_public.cpp  uinterface.cpp
vnv/: CMakeLists.txt  ReadMe.md  test_ifc_public.cpp
